Fixed ellipsis to show when column names extend past visible panel.

--- a/packages/perspective-viewer/src/less/view.less
+++ b/packages/perspective-viewer/src/less/view.less
@@ -135,7 +135,7 @@ perspective-viewer {
         display: flex;
         list-style: none;
         flex-direction: column;
-        flex-grow: 1;
+        flex: 1;
     }
     .rrow {
         display: flex;
@@ -158,10 +158,6 @@ perspective-viewer {
 
     .rrow li {
         white-space: nowrap;
-    }
-
-    .fixed {
-        max-width: 180px;
     }
 
     #top_panel perspective-row + perspective-row:before {
